fixing display issue where the page appeared to have a top margin on ios when viewing the full screen map

--- a/ui/src/app/component/nav-bar/nav-bar.component.scss
+++ b/ui/src/app/component/nav-bar/nav-bar.component.scss
@@ -27,7 +27,6 @@
 
 .items {
   width: 100vw;
-  min-height: 100vh;
   display: flex;
   flex-flow: column;
   justify-content: space-between;
